# LeanParanoia

./: .gitignore  COMPARATOR_INTEGRATION_PLAN.md  EXPLOITS.md  LeanParanoia.lean  Main.lean  README.md  VERIFIER_COMPARISON.md  lake-manifest.json  lakefile.toml  pyproject.toml
LeanParanoia/: Checker.lean  Config.lean  Helpers.lean  Types.lean
tests/: conftest.py
tests/benchmark/: generate_exploits_table.py  install_comparator.sh  test_mathlib_performance.py  test_tool_comparison.py
tests/config/: test_cli_arguments.py  test_test_toggles.py  test_trust_policies.py  test_whitelist_config.py
tests/exploits/: test_attributes.py  test_auxiliary_shadowing.py  test_axioms.py  test_constructors.py  test_debug_options.py  test_extern.py  test_kernel_reject.py  test_metavariables.py  test_native_decide.py  test_opaque.py  test_partial.py  test_replay_corruption.py  test_sorry.py  test_source_check.py  test_transitive.py  test_typeclass.py  test_unsafe.py  test_valid.py
tests/integration/: test_external_project.py  test_multi_file.py  test_replay_integration.py  test_verification_pipeline.py
tests/lean_exploit_files/Attributes/: UnsafeCSimp.lean
tests/lean_exploit_files/AuxiliaryShadowing/: MatcherShadowing.lean  PrivateShadowing.lean  ProofShadowing.lean  TheoremShadowing.lean  TypeSignature.lean
tests/lean_exploit_files/Axioms/: False.lean  MacroExpansion.lean  Magic.lean  RunCmd.lean
tests/mathlib_project/: MathlibBenchmark.lean.template  lakefile.toml.template
tests/project_template/: LeanTestProject.lean.template  lakefile.toml.template
(+94 files in other folders)
